DEVUI (bgs): fix tooltip being cropped in winrate by turn graph

--- a/core/src/css/component/battlegrounds/battles/bgs-battles.component.scss
+++ b/core/src/css/component/battlegrounds/battles/bgs-battles.component.scss
@@ -32,7 +32,8 @@
 		display: flex;
 		flex-direction: column;
 		padding: 10px;
-		overflow: auto;
+		overflow: visible;
+		z-index: 999;
 
 		.chart {
 			width: 100%;
